deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hello-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: wellflat/helloworld:latest
        ports:
        - containerPort: 8080
