service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: hello-ingress
  namespace: default
spec: 
  rules:
    - host: mini.trigkey.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-service
              port:
                number: 80
